--- a/src/main/resources/templates/reports/new.html
+++ b/src/main/resources/templates/reports/new.html
@@ -16,11 +16,10 @@
             </div>
 
             <div class="col-12 col-xxl-6">
-
                 <div class="col-xl-12">
                     <div class="card">
                         <div class="card-body">
-                            <form th:action="@{/reports/add}" th:object="${reports}" th:method="post">
+                           <form th:action="@{/reports/add}" th:object="${reports}" th:method="post">
 
                                 <div class="wizard wizard-success mb-4">
 
@@ -29,7 +28,7 @@
                                         <input type="date" id="reportDate" th:field="*{reportDate}" class="form-control" />
                                         <!-- エラーメッセージの表示 -->
                                         <div th:if="${#fields.hasErrors('reportDate')}" class="text-danger">
-                                            <span th:errors="*{reportDate}">値を入力してください</span>
+                                            <span th:text="${#fields.errors('reportDate')[0]}">値を入力してください</span>
                                         </div>
                                     </div>
 
@@ -38,40 +37,41 @@
                                         <p class="mb-1" th:text="${employee.name}"></p>
                                     </div>
 
+                                    <!-- タイトルの入力と桁数チェック -->
                                     <div class="mb-3">
                                         <label class="form-label" for="title">タイトル</label>
                                         <div class="col-md-7">
-                                            <input class="form-control" type="text" th:field="*{title}" id="title" />
+                                            <input class="form-control" type="text" th:field="*{title}" id="title" maxlength="100" />
+                                            <!-- エラーメッセージの表示部分 -->
                                             <div th:if="${#fields.hasErrors('title')}" class="text-danger">
-                                                <span th:if="${#fields.hasErrors('title') && #fields.errorCount('title') > 0}"
-                                                      th:text="${#fields.getErrors('title')[0]}">値を入力してください</span>
-                                                <span th:if="${#fields.hasErrors('title') && #fields.errorCount('title') == 1}"
-                                                      th:text="'100文字以下で入力してください'">100文字以下で入力してください</span>
+                                                <span th:if="${#fields.errors('title')[0].contains('length')}" th:text="'100文字以下で入力してください'">100文字以下で入力してください</span>
+                                                <span th:if="!${#fields.errors('title')[0].contains('length')}" th:text="${#fields.errors('title')[0]}">値を入力してください</span>
                                             </div>
                                         </div>
                                     </div>
 
+                                    <!-- 内容の入力と桁数チェック -->
                                     <div class="form-group">
                                         <label for="content">内容</label>
-                                        <textarea th:field="*{content}" class="form-control" rows="5" required></textarea>
+                                        <textarea th:field="*{content}" class="form-control" rows="5" maxlength="600"></textarea>
+                                        <!-- エラーメッセージの表示部分 -->
                                         <div th:if="${#fields.hasErrors('content')}" class="text-danger">
-                                            <span th:if="${#fields.hasErrors('content') && #fields.errorCount('content') > 0}"
-                                                  th:text="${#fields.getErrors('content')[0]}">値を入力してください</span>
-                                            <span th:if="${#fields.hasErrors('content') && #fields.errorCount('content') == 1}"
-                                                  th:text="'1000文字以下で入力してください'">1000文字以下で入力してください</span>
+                                            <span th:if="${#fields.errors('content')[0].contains('length')}" th:text="'600文字以下で入力してください'">600文字以下で入力してください</span>
+                                            <span th:if="!${#fields.errors('content')[0].contains('length')}" th:text="${#fields.errors('content')[0]}">値を入力してください</span>
                                         </div>
                                     </div>
+
                                 </div>
 
                                 <p class="mt-5">
                                     <input type="submit" value="登録" class="btn btn-primary">
                                     <a th:href="@{/reports}" class="btn btn-primary">戻る</a>
                                 </p>
+
                             </form>
                         </div><!--//end_wizard wizard-success mb-4//-->
                     </div><!--///end_card///-->
                 </div><!--///end_col-xl-12///-->
-
             </div><!--///col-12 col-xxl-6///-->
         </div><!--///end_mt-3 h-100 col-sm-10////-->
     </div><!--////end_row h-100////-->
